--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "cool-ascii-faces": "~1.3.x",
     "director": "",
-    "tui-calendar": "^1.9.0"
+    "cool-ascii-faces": "~1.3.x"
   },
   "engines": {
     "node": "0.10.x"
