added the cal code and test function

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "cool-ascii-faces": "~1.3.x",
     "director": "",
-    "googleapis": "^27.0.0"
+    "googleapis": "^27.0.0",
+    "node-google-calendar": "^1.1.1"
   },
   "engines": {
     "node": "0.10.x"
